--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,4 +4,4 @@ copy.src.on.open=false
 copy.src.target=/Applications/MAMP/htdocs/PhpProject1
 index.file=index.php
 run.as=LOCAL
-url=http://localhost:8888/visualmass/
+url=http://localhost:8888/visualmassgit/
